# aqueduct

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-oidc.yaml  docker-compose.yaml  example_router_config.yaml  mock-dex-config.yaml  pyproject.toml  tbump.toml  test-mcp.json
.github/workflows/: ci.yml  docker.yml  test.yml
aqueduct/: manage.py
aqueduct/aqueduct/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
aqueduct/gateway/: apps.py  authentication.py  config.py  rate_limiting.py  router.py  urls.py  views.py
aqueduct/gateway/backends/: base.py  openai.py
aqueduct/gateway/fixtures/: gateway_data.json  openai_endpoint.json  vllm_endpoint.json
aqueduct/gateway/tests/: test_batches_api.py  test_cors.py  test_endpoints.py  test_files_api.py  test_gateway_view_exception_handling.py  test_image_generation.py  test_mcp.py  test_rate_limiting.py  test_responses.py  test_tos.py  test_tts_stt.py  test_user_id.py  test_vector_stores_api.py  test_vllm_integration.py  utils.py
aqueduct/gateway/tests/utils/: __init__.py  base.py  mcp.py  mock_configs.py  mock_server.py  test_runner.py  vllm.py
aqueduct/gateway/views/: __init__.py  batches.py  chat_completions.py  completions.py  decorators.py  embeddings.py  errors.py  files.py  image_generation.py  mcp.py  models.py  responses.py  speech.py  transcriptions.py  utils.py  vector_store_file_batches.py  vector_store_files.py  vector_stores.py
aqueduct/locustfiles/: .locust.env  Dockerfile  docker-compose-locust.yaml  locust_fixture.json  locust_router_config.yaml  locustfile.py  prometheus.yml
aqueduct/management/: admin.py  apps.py  auth.py  context_processors.py  forms.py  middleware.py  models.py  urls.py
aqueduct/management/fixtures/: endpoint.json  initial_data.json
aqueduct/management/migrations/: 0001_groups.py  0002_initial_models.py  0003_model_exclusion.py  0004_files_api.py  0004_files_batches_api.py  0005_file_purpose_update.py  0006_mcp_server_exclusion.py  0006_request_user_id.py  0007_request_user_id.py  0008_file_proxy.py  0008_remove_batch_error_file_remove_batch_errors_and_more.py  0009_team_oauth_group_name_alter_request_model.py  0009_vector_stores.py  0009_vectorstore_vectorstorefile_vectorstorefilebatch_and_more.py  0010_org_daily_limit_multiplier_and_more.py  0010_request_processing_time_ms_and_more.py  0010_request_total_response_time_ms_and_more.py
aqueduct/management/static/css/: admin_custom.css  silk_admin_update.css
aqueduct/management/templates/management/: _cdn.html  _expiration_badge.html  _limits_compact.html  _limits_display.html  _rate_usage.html  _vector_store_card.html  base.html  batches.html  files.html  header.html  login.html  mcp_servers.html  model_list.html  org.html  team.html  tokens.html  transfer_service_account.html  usage.html  vector_store_detail.html  vector_stores.html
aqueduct/management/templates/management/common/: confirm_delete.html
aqueduct/management/templates/management/create/: service_account.html  team.html  token.html
aqueduct/management/templates/management/edit/: service_account.html  team.html  token.html
aqueduct/management/tests/: test_limit_validation.py  test_oauth_team_creation.py  test_sync_oauth_team_names_admin.py  test_tokens_page.py
aqueduct/management/views/: __init__.py  auth.py  base.py  batches.py  files.py  mcp_servers.py  models.py  org.py  service_account.py  team.py  test_auth.py  tokens.py  usage.py  vector_stores.py
aqueduct/mock_api/: endpoints.py  helpers.py  mock_configs.py  mock_server.py
aqueduct/templates/admin/: base.html
aqueduct/templates/silk/: clear_db.html  cprofile.html  request.html  sql.html  sql_detail.html  summary.html
aqueduct/templates/silk/base/: base.html  detail_base.html  root_base.html
aqueduct/templates/tos/: tos.html  tos_check.html
charts/aqueduct/: Chart.yaml  values.yaml
charts/aqueduct/files/: settings.py
charts/aqueduct/templates/: NOTES.txt  _helpers.tpl  celery-worker-deployment.yaml  cnpg-cluster.yaml  configmap-mcp-config.yaml  configmap-router-config.yaml  configmap-settings.yaml  deployment.yaml  ingress.yaml  persistentvolumeclaim-files.yaml  service.yaml
docs/: _config.yaml  admin-guide.md  deployment.md  developer-setup.md  getting-started.md  index.md  openapi.yaml  user-guide.md
docs/api/: batches.md  chat-completions.md  completions.md  embeddings.md  files.md  image_generation.md  index.md  mcp.md  models.md  openapi.md  responses.md  speech.md  transcriptions.md  vector-stores.md
docs/user-guide/: admin.md  batches.md  examples.md  files.md  index.md  mcp-servers.md  models.md  teams.md  tokens.md  usage.md  vector-stores.md
examples/: benchmark.py  curl_call.sh  open_ai_batches.py  open_ai_completed_batches.py  open_ai_completions.py
management/management/: settings.py  urls.py
management/token_administration/: admin.py  apps.py  auth.py  forms.py  models.py  urls.py  views.py
management/token_administration/fixtures/: initial_data.json
management/token_administration/migrations/: 0001_groups.py  0001_initial.py  0002_initial_models.py
management/token_administration/templates/token_administration/: _limits_display.html  base.html  header.html  login.html  model_list.html  org.html  sso.html  team.html  tokens.html  transfer_service_account.html
management/token_administration/templates/token_administration/common/: confirm_delete.html
management/token_administration/templates/token_administration/create/: service_account.html  team.html  token.html
management/token_administration/views/: __init__.py  auth.py  base.py  models.py  org.py  service_account.py  team.py  tokens.py
migrate/: Dockerfile  entrypoint.sh
migrate/template/: README.md  package.json
migrate/template/src/: access.json  collections.json  fields.json  files.json  permissions.json  policies.json  relations.json  roles.json  settings.json
migrate/template/src/schema/: snapshot.json
prometheus/: prometheus.yml
(+2 files in other folders)
