[project]
name = "aqueduct"
version = "0.1.14"
description = "A simple yet fully-featured AI gateway built on top of the LiteLLM Router SDK with MCP server support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "celery[redis]>=5.5.2",
    "daphne>=4.2.1",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-silk>=5.4.0",
    "django-tos>=1.1.0",
    "httpx>=0.28.1, <1",
    "litellm==1.72.0",
    "mcp==1.25.0",
    "mozilla-django-oidc>=4.0.1",
    "openai>=2.13.0",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.10",
]
vllm = [
    "vllm==0.8.4",
]

[dependency-groups]
dev = [
    "channels[daphne]>=4.3.1",
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "ruff>=0.15.5",
    "tbump>=6.11.0",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "**/migrations/*.py",
    "aqueduct/aqueduct/settings.py",
    "charts/**/*",
]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method
    "ANN205", # Missing return type annotation for staticmethod
    "ANN206", # Missing return type annotation for classmethod
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "ASYNC",  # flake8-async async/await best practices
    "B",      # flake8-bugbear
    "B904",   # raise-without-from-inside-except
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "DJ",     # Django-specific patterns
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg
    "ERA",    # flake8-eraduate commented-out code
    "F",      # Pyflakes
    "FURB129", # Use list.extend() instead of for-loop with append
    "FURB166", # Use int.from_bytes() instead of manual conversion
    "FURB168", # Use is operator for type comparisons
    "FURB169", # Use datetime.UTC instead of timezone.utc
    "FURB171", # Use str.startswith() with tuple
    "FURB177", # Use Path.cwd() instead of os.getcwd()
    "FURB181", # Use re.compile() for repeated patterns
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions - import conventions
    "INP",    # flake8-no-pep420 - implicit namespace packages
    "LOG",    # flake8-logging - logging best practices
    "N",      # pep8-naming - naming conventions
    "PERF101", # Do not cast an iterable to list before iterating over it
    "PERF102", # Incorrect dict iterator
    "PERF203", # try-except within a loop incurs performance overhead
    "PERF401", # Manual list comprehension
    "PERF402", # Use list or list.copy to create a copy of a list
    "PERF403", # Use a dictionary comprehension instead of {modifier} for-loop
    "PGH003", # Use specific rule codes when ignoring type issues
    "PIE",    # flake8-pie miscellaneous lints
    "PLE",    # Pylint Error - error detection
    "PLR0402", # Use `from` instead of `import ... as ...`
    "PLR1714", # Repeated equality comparisons -> use `in`
    "PLR2004", # Avoid magic values in comparisons
    "PLR5501", # Use `elif` instead of `else` then `if`
    "PLC",
    "PLW",    # pylint ruleset
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return simplifications
    "RSE",    # flake8-raise - raise statement improvements
    "RUF",    # Ruff-specific rules
    "RUF005", # Collection literal concatenation
    "RUF013", # Implicit Optional in type annotations
    "RUF015", # Unnecessary list conversion before indexing
    "RUF019", # Unkeyed membership checks
    "RUF100", # Unused noqa directive
    "S",      # flake8-bandit security checks
    "S110",   # try-except-pass detected
    "S112",   # try-except-continue detected
    "SIM",    # flake8-simplify
    "SLOT",   # flake8-slots - __slots__ optimization
    "T10",    # flake8-debugger - debugger detection
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = ["S603", "E731", "TRY003", "EM101", "EM102", "TRY401", "TRY301", "PLC0415", "E731", "SIM108"]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
known-first-party = ["aqueduct", "gateway", "management", "mock_api"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (imported but unused) in all `__init__.py` files
"__init__.py" = ["F401"]
# TODO: remove DJ001 on next db migration and add it there
"**/management/models.py" = ["DJ001"]
# Too much noise for tests
"**/tests/**/*.py" = ["S", "ANN"]
